<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductRegistration">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20999998">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp60"
            android:text="@string/business_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/sp20"
            android:textStyle="bold" />

        <!--Business Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp50"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp8"
                    android:text="@string/business_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="@dimen/dp8"
                    android:text="Urdu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/edtborder">

                <Spinner
                    android:id="@+id/bussNameSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:entries="@array/district"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:paddingLeft="@dimen/dp8"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp8"
                    android:src="@drawable/ic_dropdown" />
            </RelativeLayout>
        </LinearLayout>
        <!--Name Of Product-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp8"
                    android:text="@string/name_of_product"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="@dimen/dp8"
                    android:text="Urdu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/edtNameOfProduct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp45"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/edtborder"
                android:gravity="center"
                android:hint="Enter Product Name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                android:textStyle="normal" />
        </LinearLayout>
        <!--Category-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp8"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="@dimen/dp8"
                    android:text="@string/urdu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp50"
                android:layout_marginTop="@dimen/dp8"
                android:background="@drawable/edtborder">

                <Spinner
                    android:id="@+id/prodCategorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:entries="@array/category"
                    android:gravity="center"
                    android:minHeight="0dp"
                    android:paddingLeft="@dimen/dp8"
                    android:textAlignment="center"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="@dimen/dp40"
                    android:layout_height="@dimen/dp40"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/dp8"
                    android:src="@drawable/ic_dropdown" />
            </RelativeLayout>
        </LinearLayout>
        <!--Food test Result-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dp8"
                    android:text="@string/food_test_result"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingRight="@dimen/dp8"
                    android:text="Urdu"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp8"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:paddingLeft="@dimen/dp8"
                    android:text="@string/upload"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="@dimen/dp45"
                    android:layout_height="@dimen/dp45"
                    android:layout_weight="0.7"
                    android:gravity="end"
                    android:paddingRight="@dimen/dp8"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/dp220"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp50"
            android:layout_marginBottom="@dimen/dp50"
            android:background="@drawable/btnborder"
            android:text="Register" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>